--- a/src/Components/Specials.css
+++ b/src/Components/Specials.css
@@ -19,9 +19,26 @@
     width: 200px;
     height: 50px;
     font-size: 25px;
+    font-weight: bold;
     font-family: "Karla";
     margin-left: 1140px;
     margin-top: -60px;
+}
+
+.specials_title button:hover{
+    position: absolute;
+    color: #EDEFEE;
+    background-color: #EE9972;
+    border: 1px solid #EE9972;
+    border-radius: 10px;
+    width: 200px;
+    height: 50px;
+    font-size: 25px;
+    font-family: "Karla";
+    margin-left: 1140px;
+    margin-top: -60px;
+    transform: scale(1.1);
+    transition: 0.3s ease all;
 }
 
 .specials_grid{
@@ -36,6 +53,11 @@
 .specials{
     background-color: #edefee;
     border-radius: 10px;
+}
+
+.specials:hover{
+    transform: scale(1.1);
+    transition: 0.3s ease all;
 }
 
 .specials img{
@@ -77,6 +99,10 @@
     flex-direction: row;
     padding: 40px 30px 0px 30px;
     gap: 10px;
+}
+
+.specials .delivery:active{
+    color: #f4ce14;
 }
 
 .specials .delivery h3{
