--- a/src/Components/Reserve.css
+++ b/src/Components/Reserve.css
@@ -9,6 +9,7 @@
 .reserve_box{
     background-color: #495e57;
     display: flex;
+    border-radius: 30px 30px 0px 0px;
 }
 
 .reserve_box_left{
@@ -19,6 +20,52 @@
 
 .reserve_box_left form{
     width: 700px;
+    display: flex;
+    margin: auto;
+    flex-direction: column;
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "Karla";
+}
+
+.reserve_box_left form label{
+    margin-top: 20px;
+}
+
+
+.reserve_box_left form input{
+    margin-top: 20px;
+    width: 80%;
+    height: 40px;
+    background-color: #fbdabb;
+    border: 1px solid #fbdabb;
+    border-radius: 5px;
+    padding-left: 10px;
+    color: #333333;
+}
+
+
+.reserve_box_left form input:focus{
+    outline: 3px solid #333333
+}
+.reserve_box_left form textarea:focus{
+    outline: 3px solid #333333
+}
+
+.reserve_box_left form .times{
+    margin-top: 20px;
+    width: 40%;
+    background-color: #fbdabb;
+}
+
+.reserve_box_left form textarea{
+    margin-top: 20px;
+    width: 80%;
+    height: 150px;
+    background-color: #fbdabb;
+    border: 1px solid #fbdabb;
+    border-radius: 5px;
 }
 
 .reserve_box_right{
@@ -29,8 +76,79 @@
 
 .reserve_box_right form{
     width: 700px;
+    display: flex;
+    margin: 20px 0px 0px 0px;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #fbdabb;
+    border: 5px solid #fbdabb;
+    border-radius: 10px ;
+    padding-left: 40px;
+    padding-bottom: 100px;
+    font-family: "Karla";
 }
 
-.reserve_box button{
-    position: absolute;
+.reserve_box_right form input{
+    margin-top: 30px;
+    width: 90%;
+    height: 40px;
+    background-color: #333333;
+    color: #fbdabb;
+    border: 1px solid #333333;
+    border-radius: 5px;
+    letter-spacing: 3px;
+    padding-left: 10px;
+}
+
+.reserve_box_right form input:focus{
+    outline: 3px solid #ee9972
+}
+
+.reserve_box_right form label{
+    margin-top: 20px;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.reserve_box_right form #checks{
+    accent-color: #ee9972;
+}
+
+.reserve_box_right form #checks:focus{
+    outline: none;
+}
+
+.reserve_box_right form label:first-of-type{
+    margin-top: 50px;
+}
+
+.reserve_box_right form label:last-of-type{
+    margin-left: -490px;
+    padding: -50px;
+}
+
+.reserve_box_right form h3{
+    margin: -40px 0px 0px 50px;
+}
+
+.reserve_box .confbutton{
+    padding: 10px;
+    margin: 40px 0px 50px 50px;
+    width: 600px;
+    height: 100px;
+    background-color: #f4ce14;
+    border: 1px solid #f4ce14;
+    border-radius: 30px;
+    font-size: 40px;
+    font-weight: bold;
+    font-family: "Karla";
+}
+
+.reserve_box .confbutton:hover{
+    color: #ffffff;
+    background-color: #EE9972;
+    border: 1px solid #EE9972;
+    transition: all 0.3s ease;
+    scale: 1.1;
+    cursor: pointer;
 }
