--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -66,3 +66,17 @@
     right: 300px;
     border-radius: 50px;
 }
+
+@media only screen and (max-width: 600px){
+
+    .hero_right img{
+        display: none;
+    }
+
+    .hero_left p{
+        font-family: "Karla", sans-serif;
+        font-size: 20px;
+        color: #FFFFFF;
+        width: 300px;
+    }
+}
