--- a/src/Components/Specials.css
+++ b/src/Components/Specials.css
@@ -8,7 +8,7 @@
     font-size: 30px;
     font-family: "Markazi";
     color: #495357;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .specials_title button{
@@ -114,4 +114,42 @@
 .specials .delivery img{
     width: 40px;
     height: 25px;
+}
+
+@media only screen and (max-width: 600px){
+    .specials_container{
+        padding-top: 5px;
+        display: inline-block;
+    }
+
+    .specials_title{
+        padding-top: 20px;
+        padding-left: 20px;
+        display: block;
+    }
+
+    .specials_title h1{
+        text-align: center;
+    }
+
+    .specials_title button{
+        display: block;
+        position: absolute;
+        right: 90px;
+        bottom: -2000px;
+    }
+
+    .specials_grid{
+        padding-left: 50px;
+        padding-top: 40px;
+        padding-bottom: 1280px;
+        grid-template-columns: repeat(1,300px);
+        grid-template-rows: 1fr;
+    }
+
+    .specials img{
+        width: 300px;
+        height: 180px;
+        border-radius: 10px 10px 0 0;
+    }
 }
