--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -53,5 +53,18 @@
     margin-right: -100px;
 }
 
+@media only screen and (max-width: 600px){
+
+    .footer_right{
+        display: none;
+    }
+
+    .footer_left img{
+        left: -240px;
+        position: absolute;
+
+    }
+}
+
 
 
