--- a/src/Components/Reserve/Reserve.css
+++ b/src/Components/Reserve/Reserve.css
@@ -33,6 +33,11 @@
     margin-top: 20px;
 }
 
+.reserve_box_left form label p{
+    font-size: 15px;
+    color: #EE9972;
+}
+
 
 .reserve_box_left form input{
     margin-top: 20px;
@@ -49,7 +54,7 @@
 .reserve_box_left form input:focus{
     outline: 3px solid #333333
 }
-.reserve_box_left form textarea:focus{
+.reserve_box_left form select:focus{
     outline: 3px solid #333333
 }
 
@@ -63,6 +68,15 @@
     margin-top: 20px;
     width: 80%;
     height: 150px;
+    background-color: #fbdabb;
+    border: 1px solid #fbdabb;
+    border-radius: 5px;
+}
+
+.reserve_box_left form select{
+    margin-top: 20px;
+    width: 80%;
+    height: 30px;
     background-color: #fbdabb;
     border: 1px solid #fbdabb;
     border-radius: 5px;
@@ -146,8 +160,8 @@
 
 .reserve_box .confbutton{
     padding: 10px;
-    margin: 40px 0px 50px 50px;
-    width: 600px;
+    margin: 60px 0px 50px 25px;
+    width: 500px;
     height: 100px;
     background-color: #f4ce14;
     border: 1px solid #f4ce14;
@@ -165,6 +179,12 @@
     scale: 1.1;
     cursor: pointer;
 }
+
+.reserve_box .reserve_menu_link{
+    text-decoration: none;
+    color: #495E57;
+}
+
 
 @media only screen and (max-width: 600px){
     
@@ -188,6 +208,9 @@
     .reserve_box_left form label{
         font-size: 20px;
     }
+    .reserve_box_left form label p{
+        font-size: 15px;
+    }
 
     .reserve_box_left form input{
         width: 45%;
@@ -197,6 +220,11 @@
         width: 45%;
     }
 
+    .reserve_box_left form select{
+        width: 45%;
+    }
+
+
     .reserve_box_left form .times{
         width: 45%;
     }
@@ -204,6 +232,7 @@
     .reserve_box_right{
         padding-top: 20px;
         padding-left: 20px;
+        padding-bottom: 150px;
     }
 
     .reserve_box_right form{
@@ -238,11 +267,14 @@
     }
 
     .reserve_box .confbutton{
+        position: absolute;
         width: 300px;
         height: 50px;
         font-size: 20px;
         padding: 10px;
-        margin-left: 25px;
+        margin-left: 5px;
+        margin-top: 1200px;
+        z-index: 9999;
     }
 
 }
