--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -60,6 +60,11 @@
     cursor: pointer;
 }
 
+.hero_container .hero_left .reserve_btn_link{
+    text-decoration: none;
+    color: black;
+}
+
 .hero_right img{
     position: absolute;;
     top: 180px;
