--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -64,7 +64,7 @@
     display: none;
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 600px){ /*respnsive view for mobile screens*/
 
     .head-container{
         overflow-x: hidden;
