--- a/src/Components/Booked/Booked.css
+++ b/src/Components/Booked/Booked.css
@@ -44,8 +44,8 @@
     margin-top: 30px;
 }
 
-@media only screen and (max-width: 600px){
-
+@media only screen and (max-width: 600px){ /*Responsive view of confirmation page*/
+ 
     .booked_container .tick{
         padding-bottom: 40px;
         margin-top: 0px;
