--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -72,7 +72,7 @@
     border-radius: 50px;
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 600px){ /*responsive view for mobile view*/
 
     .hero_right img{
         display: none;
