--- a/src/Components/Reserve/Reserve.css
+++ b/src/Components/Reserve/Reserve.css
@@ -11,10 +11,11 @@
     display: flex;
     border-radius: 30px 30px 0px 0px;
 }
+ /*-- Styling for the left side of the reservation page --*/
 
 .reserve_box_left{
     padding-top: 50px;
-    padding-left: 200px;
+    padding-left: 200px; /*sectioning the left side*/
     position: relative;
 }
 
@@ -81,6 +82,8 @@
     border: 1px solid #fbdabb;
     border-radius: 5px;
 }
+
+/*-- Styling for the right side of the reservation page --*/
 
 .reserve_box_right{
     padding-top: 50px;
@@ -187,7 +190,7 @@
 
 
 @media only screen and (max-width: 600px){
-    
+    /*responsive view for mobile view*/
     .reserve_container{
         overflow-x: hidden;
     }
