--- a/src/Components/Specials/Specials.css
+++ b/src/Components/Specials/Specials.css
@@ -117,6 +117,8 @@
 }
 
 @media only screen and (max-width: 600px){
+    /*responsive view to stack each dish item for mobile view*/
+    
     .specials_container{
         padding-top: 5px;
         display: inline-block;
